fixed hero on mobile view

--- a/src/Pages/Landing/Landing.module.css
+++ b/src/Pages/Landing/Landing.module.css
@@ -53,8 +53,8 @@ nav ul li a:hover {
 
 
 .first_view {
-  margin: 1rem;
-  margin-top: 0;
+  margin: auto 1rem;
+  /* margin-top: 0; */
 }
 
 .get_started {
